[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/sprites/Fruits/appleIdle.tres" type="Texture" id=1]
[ext_resource path="res://src/Enemies/Thorns.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Background pixel art.png" type="Texture" id=3]
[ext_resource path="res://assets/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Coin/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Orbitron-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/Characters/Character.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/TileSwamp.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Enemies/Mushroom.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Enemies/Enemy1.tscn" type="PackedScene" id=10]
[ext_resource path="res://HUD.gd" type="Script" id=11]
[ext_resource path="res://assets/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=12]

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1829.52, 12 )

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 319 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 522.5, 10 )

[node name="Level_1" type="Node2D"]
position = Vector2( 1, 20 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = -20.0
margin_right = 1023.0
margin_bottom = 580.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" parent="TextureRect" instance=ExtResource( 2 )]
position = Vector2( 158, 439 )
scale = Vector2( 0.9, 1 )

[node name="Character" parent="." instance=ExtResource( 7 )]
position = Vector2( 63, 252 )
collision_mask = 11

[node name="Character2" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.27451, 0.309804, 0.552941, 1 )
position = Vector2( 63, 308 )
scale = Vector2( 1, -1 )
flip = -1.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -1, 276 )
physics_material_override = SubResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 511.217, 281.737 )
rotating = true
current = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Panel" type="Panel" parent="HUD"]
modulate = Color( 0, 0, 0, 0.352941 )
margin_left = 20.0
margin_top = 13.0
margin_right = 96.0
margin_bottom = 53.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 18.0
margin_top = 18.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="HUD"]
margin_left = 49.0
margin_top = 21.0
margin_right = 64.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 8 )
text = "x "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="HUD"]
margin_left = 65.0
margin_top = 21.0
margin_right = 91.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 9 )
text = "##"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Node2D" parent="."]
position = Vector2( 30.5442, -11.0883 )

[node name="Coin1" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 376.456, 175.088 )
collision_layer = 8
collision_mask = 2

[node name="Coin9" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 97.4558, 262.088 )
collision_layer = 8
collision_mask = 2

[node name="Coin2" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 144.456, 167.088 )
collision_layer = 8
collision_mask = 2

[node name="Coin3" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 784.456, 215.088 )
collision_layer = 8
collision_mask = 2

[node name="Coin7" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 352.456, 264.088 )
collision_layer = 8
collision_mask = 2

[node name="Coin6" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 683.456, 115.088 )
collision_layer = 8
collision_mask = 2

[node name="Coin4" parent="Coins" instance=ExtResource( 5 )]
modulate = Color( 0.27451, 0.309804, 0.552941, 1 )
position = Vector2( 501.456, 432.088 )
scale = Vector2( 1, -1 )
collision_layer = 8
collision_mask = 2

[node name="Coin8" parent="Coins" instance=ExtResource( 5 )]
modulate = Color( 0.27451, 0.309804, 0.552941, 1 )
position = Vector2( 639.456, 319.088 )
scale = Vector2( 1, -1 )
collision_layer = 8
collision_mask = 2

[node name="Coin10" parent="Coins" instance=ExtResource( 5 )]
modulate = Color( 0.27451, 0.309804, 0.552941, 1 )
position = Vector2( 872.456, 318.088 )
scale = Vector2( 1, -1 )
collision_layer = 8
collision_mask = 2

[node name="Coin5" parent="Coins" instance=ExtResource( 5 )]
modulate = Color( 0.27451, 0.309804, 0.552941, 1 )
position = Vector2( 189.456, 419.088 )
scale = Vector2( 1, -1 )
collision_layer = 8
collision_mask = 2

[node name="Enemy1" parent="." instance=ExtResource( 10 )]
modulate = Color( 0.27451, 0.309804, 0.552941, 1 )
position = Vector2( 607, 308 )
scale = Vector2( -1, -1 )

[node name="Path2D" type="Path2D" parent="Enemy1"]
curve = SubResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 4 )]
position = Vector2( 335, 172 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
tile_data = PoolIntArray( -65543, 25, 0, -65540, 26, 0, -6, 27, 0, -65532, 18, 0, -65531, 19, 0, -65530, 20, 0, -65529, 21, 0, 65529, 0, 0, 65530, 1, 0, 65531, 2, 0, 65532, 3, 0, 4, 4, 0, 5, 14, 0, 6, 14, 0, 7, 9, 0, 131065, 28, 0, 65537, 22, 0, 65539, 26, 0, 65540, 5, 0, 65541, 14, 0, 65542, 14, 0, 65543, 8, 0, 65546, 22, 0, 131076, 6, 0, 131077, 13, 0, 131078, 12, 0, 131079, 7, 0, 131082, 27, 0 )

[node name="TileSwamp" parent="." instance=ExtResource( 8 )]
position = Vector2( 335, 164 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
tile_data = PoolIntArray( 262145, 6, 0, 327681, 5, 0, 327690, 4, 0, 458745, 0, 0, 458746, 1, 0, 458747, 2, 0, 458748, 3, 0 )

[node name="wall" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2( -11, 280.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="wall"]
position = Vector2( 1034, 279 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall"]
position = Vector2( 502.5, 592 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall"]
position = Vector2( 501, -30 )
shape = SubResource( 6 )

[node name="Mushroom" parent="." instance=ExtResource( 9 )]
position = Vector2( 526, 118 )
scale = Vector2( 0.8, 1 )

[node name="Enemy2" parent="." instance=ExtResource( 10 )]
position = Vector2( 607, 252 )
scale = Vector2( -1, 1 )

[connection signal="coin_collected" from="Coins/Coin1" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin9" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin2" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin3" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin7" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin6" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin4" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin8" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin10" to="HUD" method="_on_coin_collected" flags=6]
[connection signal="coin_collected" from="Coins/Coin5" to="HUD" method="_on_coin_collected" flags=6]
